--- a/index.html
+++ b/index.html
@@ -4,14 +4,27 @@
 	<link rel="stylesheet" type="text/css" href="css.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Page d'accueil</title>
+	<title> Sommaire </title>
 </head>
 <body>
-	<header class="topp">
-	<div class="top">
-		<h1>Test acceuil</h1>
-	</div>
-	</header>
+<div class="top">
+	<p class="som"> Sommaire</p>
+	
+</div>
+<div class="barremid">
 
+    
+<div class="boxl">
+<iframe src="accueil.html" name="t1" class="b1"></iframe></div>
+<!--   -->
+<iframe src="lasttp/lasttp.html" class="boutontp" name="t2"></iframe>
+
+<iframe src="trucg.html" class="boutontpd" name="t"></iframe>
+
+
+<p2> 
+	
+
+</div>
 </body>
 </html>
